# tracel-terrars

./: .gitignore  Cargo.toml  LICENSE-ISC  _typos.toml
.cargo/: config.toml
.github/workflows/: test.yml
crates/provider-hashicorp-aws/: Cargo.toml  terrars-test.json  terrars.json
crates/provider-hashicorp-aws/src/aws/: accessanalyzer_analyzer.rs  accessanalyzer_archive_rule.rs  account_alternate_contact.rs  account_primary_contact.rs  account_region.rs  acm_certificate.rs  acm_certificate_validation.rs  acmpca_certificate.rs  acmpca_certificate_authority.rs  acmpca_certificate_authority_certificate.rs  acmpca_permission.rs  acmpca_policy.rs  alb.rs  alb_listener.rs  alb_listener_certificate.rs  alb_listener_rule.rs  alb_target_group.rs  alb_target_group_attachment.rs  ami.rs  ami_copy.rs  ami_from_instance.rs  ami_launch_permission.rs  amplify_app.rs  amplify_backend_environment.rs  amplify_branch.rs  amplify_domain_association.rs  amplify_webhook.rs  api_gateway_account.rs  api_gateway_api_key.rs  api_gateway_authorizer.rs  api_gateway_base_path_mapping.rs  api_gateway_client_certificate.rs  api_gateway_deployment.rs  api_gateway_documentation_part.rs  api_gateway_documentation_version.rs  api_gateway_domain_name.rs  api_gateway_domain_name_access_association.rs  api_gateway_gateway_response.rs  api_gateway_integration.rs  api_gateway_integration_response.rs  (+2155 more)
crates/provider-hashicorp-aws/test/: Cargo.toml
crates/terrars-gen/: Cargo.toml
crates/terrars-gen/src/: main.rs
crates/terrars-gen/src/generatelib/: generate.rs  mod.rs  sourceschema.rs
crates/tracel-terrars-hashicorp-aws/: Cargo.toml  terrars-all.json  terrars.json
crates/tracel-terrars-hashicorp-aws/src/aws/: account_alternate_contact.rs  acm_certificate.rs  alb_listener.rs  alb_listener_certificate.rs  amplify_app.rs  amplify_domain_association.rs  api_gateway_api_key.rs  api_gateway_base_path_mapping.rs  api_gateway_documentation_version.rs  api_gateway_integration.rs  api_gateway_method_response.rs  api_gateway_model.rs  api_gateway_resource.rs  api_gateway_stage.rs  api_gateway_usage_plan.rs  api_gateway_usage_plan_key.rs  api_gateway_vpc_link.rs  apigatewayv2_api_mapping.rs  apigatewayv2_authorizer.rs  apigatewayv2_deployment.rs  apigatewayv2_domain_name.rs  apigatewayv2_model.rs  app_cookie_stickiness_policy.rs  appautoscaling_policy.rs  appautoscaling_scheduled_action.rs  appconfig_environment.rs  appconfig_extension.rs  appfabric_app_authorization_connection.rs  appfabric_app_bundle.rs  appfabric_ingestion_destination.rs  appflow_flow.rs  appmesh_mesh.rs  (+851 more)
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/commands/: generate.rs
