[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["xtask", "crates/tracel-terrars-hashicorp-aws"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
aargvark = { version = "0.3", features = ["serde_json"] }
cargo_toml = "0.20"
genemichaels-lib = "0.5"
loga = "0.5"
proc-macro2 = "1"
quote = "1"
serde = "1"
serde_json = "1"
syn = { version = "2", features = ["full"] }
tempfile = "3"
toml = "0.8"