[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["xtask", "crates/tracel-terrars-hashicorp-aws"]

[workspace.package]
edition = "2024"
version = "0.0.1"
license = "MIT OR Apache-2.0"
readme = "README.md"

[workspace.dependencies]
anyhow = "1"
cargo_toml = "0.22"
clap = { version = "4", features = ["derive"] }
genemichaels-lib = "0.8"
proc-macro2 = "1"
quote = "1"
serde = "1"
serde_json = "1"
syn = { version = "2", features = ["full"] }
tempfile = "3"
toml = "0.9"
