[package]
name = "terrars-gen"
edition = "2021"
description = "Terraform in Rust"
license = "ISC"
readme = "readme.md"
repository = "https://github.com/andrewbaxter/terrars"

[dependencies]
cargo_toml = { workspace = true }
clap = { workspace = true }
genemichaels-lib = { workspace = true }
loga = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
