[package]
name = "terrars-gen"
edition = "2021"
description = "Terraform in Rust"
license = "ISC"
version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
cargo_toml = { workspace = true }
clap = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
syn = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
